add event view page done

--- a/public/master/css/style.css
+++ b/public/master/css/style.css
@@ -7471,6 +7471,7 @@ footer {
 .event-feature-img{
     width: 100%;
     border-radius: 5px;
-    height: 200px;
-    background-size: cover;
+    height: 227px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
