--- a/public/master/css/style.css
+++ b/public/master/css/style.css
@@ -7615,3 +7615,14 @@ footer {
     left: 0px;
     top: 10px;
 }
+.avatar-img{
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    background-position: center;
+    margin-top: 40px !important;
+}
+.avatar-label{
+    position: absolute;
+    left: 23px;
+}
