--- a/public/master/css/style.css
+++ b/public/master/css/style.css
@@ -6,11 +6,13 @@ Fonts
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900' crossorigin="anonymous");
 @import url('https://fonts.google.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i' crossorigin="anonymous");
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:300&display=swap');
 /* ================================================================================== 
 Reset Css
 ===================================================================================== */
-
+body{
+    font-family: 'Poppins', sans-serif !important;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,7 +50,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
-	font-family: "Roboto" !important;
+	/* font-family: "Roboto" !important; */
 	overflow-x: hidden;
 	font-weight: 400 !important;
 	background: #f1f1f1 !important;
