--- a/public/master/css/style.css
+++ b/public/master/css/style.css
@@ -6,12 +6,12 @@ Fonts
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900' crossorigin="anonymous");
 @import url('https://fonts.google.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i' crossorigin="anonymous");
-@import url('https://fonts.googleapis.com/css?family=Poppins:300&display=swap');
-/* ================================================================================== 
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');/* ================================================================================== 
 Reset Css
 ===================================================================================== */
 body{
     font-family: 'Poppins', sans-serif !important;
+
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -1569,7 +1569,8 @@ main {
 
 .like-item span {
 	margin-left: 5px;
-	margin-bottom: 0;
+    margin-bottom: 0;
+    font-size: 13px;
 }
 
 .like-item ins {
