--- a/public/master/css/style.css
+++ b/public/master/css/style.css
@@ -11,6 +11,8 @@ Reset Css
 ===================================================================================== */
 body{
     font-family: 'Poppins', sans-serif !important;
+    /* font-size: 8px !important; */
+
 
 }
 html, body, div, span, applet, object, iframe,
@@ -1332,7 +1334,7 @@ main {
 	margin-bottom: 0;
 }
 
-.event-top-left h4 span{
+.event-top-left h4 span:hover{
     color: #ff7555;
 }
 
@@ -1489,7 +1491,7 @@ main {
 }
 
 .city-dt-list li {
-    width: 31.1%;
+    width: 28%;
     text-align: center;
 	display: inline-block;
 }
@@ -1506,7 +1508,7 @@ main {
 }
 
 .list-text-dt span {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 500;
     color: #313131;
     line-height: 0;
@@ -1516,7 +1518,7 @@ main {
 
 .list-text-dt ins {
     font-weight: 400;
-    font-size: 13px;
+    font-size: 11px;
     line-height: 0;
     color: #847577;
     text-decoration: none;
@@ -7676,6 +7678,7 @@ color:
     margin-left: 30px;
     text-align: center;
     margin-top: 25px;
+    font-size: 13px !important;
 }
 .btn_save:hover{
     color:#fff !important;
