--- a/public/master/css/responsive.css
+++ b/public/master/css/responsive.css
@@ -1188,6 +1188,9 @@ main {
 .container {
     max-width: 1170px !important;
 }
+.custom-bg-event2{
+	height: auto !important;
+}
 }
 @media (max-width: 1200px) {
 	.search-wrapper{
